kubernetes/production/apps/webapi1/webapi1/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    external-dns.alpha.kubernetes.io/target: "homelab-tunnel.sillock.io"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
  name: test-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: &host webapi1.sillock.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapi1
                port:
                  name: http
  tls:
    - hosts:
        - *host
      secretName: webapi1-tls-certificate
